--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -3,6 +3,15 @@ html {
     font-family: 'sans-serif';
 }
 
+a {
+    font-size: 12px;
+    text-decoration: none;
+}
+
+a:hover {
+    cursor: pointer;
+}
+
 p {
     font-size: 1.6rem;
     line-height: 1.5;
