--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -4,7 +4,6 @@ html {
 }
 
 a {
-    font-size: 12px;
     text-decoration: none;
 }
 
@@ -25,6 +24,10 @@ h1 {
     letter-spacing: -1px;
     margin: 2rem 0;
     text-align: center;
+}
+
+h1 a {
+    color: #000
 }
 
 @font-face {
